# llama-backend

./: README.md  pyproject.toml  start.py
app/: __init__.py  api.py  settings.py  tasks.py
app/api/: fast_api.py
app/llama/: __init__.py  model.py
