[tool.poetry]
name = "llama-backend"
version = "0.1.0"
description = "this is llama model backend"
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
fastapi = "^0.104.1"
celery = {extras = ["redis"], version = "^5.3.6"}
transformers = "^4.35.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
accelerate = "^0.24.1"
bitsandbytes = "^0.41.2.post2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
